# Masked-critique-finetuning

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  check_limo.py  docker-compose.yml  download_limo.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
LIMO/eval/completions/agentica-org/DeepScaleR-1.5B-Preview/aime/: test_qwen-instruct_t0.0_k1_s0_e30_gen_round0.pkl
LIMO/eval/completions/agentica-org/DeepScaleR-1.5B-Preview/amc/: test_qwen-instruct_t0.0_k1_s0_e40_gen_round0.pkl
LIMO/eval/completions/deepscaler_fullft_all/2025-04-15 08_19_54/final/aime/: test_qwen-instruct_t0.0_k1_s0_e30_gen_round0.pkl  test_qwen-instruct_t0.7_k1_s0_e30_gen_round0.pkl
LIMO/eval/completions/deepscaler_fullft_all/2025-04-16 21_58_24/final/aime/: test_qwen-instruct_t0.0_k1_s0_e30_gen_round0.pkl
LIMO/eval/completions/deepscaler_fullft_all/2025-04-19 13_35_54/final/aime/: test_qwen-instruct_t0.0_k1_s0_e1_gen_round0.pkl
LIMO/eval/completions/deepscaler_fullft_all/2025-04-19 13_35_54/final/amc/: test_qwen-instruct_t0.0_k1_s0_e40_gen_round0.pkl
LIMO/eval/completions/deepscaler_fullft_all_15/2025-04-19 21_38_32/final/amc/: test_qwen-instruct_t0.0_k1_s0_e40_gen_round0.pkl
LIMO/eval/completions/deepscaler_fullft_all_25/2025-04-19 23_45_14/final/amc/: test_qwen-instruct_t0.0_k1_s0_e40_gen_round0.pkl
LIMO/eval/completions/deepscaler_fullft_all_updated/2025-04-20 15_59_36/final/aime/: test_qwen-instruct_t0.0_k1_s0_e1_gen_round0.pkl
LIMO/eval/completions/deepscaler_fullft_all_updated/2025-04-20 15_59_36/final/amc/: test_qwen-instruct_t0.0_k1_s0_e40_gen_round0.pkl
LIMO/eval/completions/deepscaler_fullft_all_updated/2025-04-27 15_59_41/final/aime/: test_qwen-instruct_t0.0_k1_s0_e1_gen_round0.pkl
LIMO/eval/completions/deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B/aime/: test_qwen-instruct_t0.0_k1_s0_e30_gen_round0.pkl
LIMO/eval/completions/deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B/amc/: test_qwen-instruct_t0.0_k1_s0_e40_gen_round0.pkl
LIMO/eval/outputs/agentica-org/DeepScaleR-1.5B-Preview/aime/: test_qwen-instruct_t0.0_k1_s0_e30.jsonl
LIMO/eval/outputs/agentica-org/DeepScaleR-1.5B-Preview/amc/: test_qwen-instruct_t0.0_k1_s0_e40.jsonl
LIMO/eval/outputs/deepscaler_fullft_all/2025-04-15 08_19_54/final/aime/: test_qwen-instruct_t0.0_k1_s0_e30.jsonl  test_qwen-instruct_t0.7_k1_s0_e30.jsonl  test_qwen-instruct_t0.7_k5_s0_e30.jsonl
LIMO/eval/outputs/deepscaler_fullft_all/2025-04-16 21_58_24/final/aime/: test_qwen-instruct_t0.0_k1_s0_e30.jsonl
LIMO/eval/outputs/deepscaler_fullft_all_15/2025-04-19 21_38_32/final/amc/: test_qwen-instruct_t0.0_k1_s0_e40.jsonl
LIMO/eval/outputs/deepscaler_fullft_all_updated/2025-04-27 15_59_41/final/aime/: test_qwen-instruct_t0.0_k1_s0_e1.jsonl  test_qwen-instruct_t0.0_k1_s0_e30.jsonl
LIMO/eval/outputs/deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B/aime/: test_qwen-instruct_t0.0_k1_s0_e30.jsonl
LIMO/eval/outputs/deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B/amc/: test_qwen-instruct_t0.0_k1_s0_e40.jsonl
LIMO/eval/prompts/qwen-instruct/: aime.py  olympiadbench.py
btsft/func/: format_reward.py  training.py
btsft/trainers/: blurred_thoughts.py
config/: carc.yaml
data/: __init__.py  data_loader.py
docs/: GITHUB_READY_CHECKLIST.md  PROJECT_STRUCTURE.md
examples/: __init__.py  basic_training.py
scripts/: setup_repo.py
tests/: __init__.py  test_trainer.py
